// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: <ResetButton /> should handle clicks 1`] = `
<SurroundPortals
  portalName="filter.reset-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [MockFunction],
    }
  }
>
  <div
    className="sg-gly5c9-buttonContainer"
  >
    <Button
      color="secondary"
      disabled={false}
      onClick={[MockFunction]}
      testId="clearAllButton"
      variant="text"
    >
      <Text
        acceptPlainTextWithPlaceholders={false}
        className={null}
        params={{}}
        role={null}
        string="filter.reset"
        transform={null}
      />
    </Button>
  </div>
</SurroundPortals>
`;

exports[`Filter: <ResetButton /> should render as activated 1`] = `
<SurroundPortals
  portalName="filter.reset-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [Function],
    }
  }
>
  <div
    className="sg-gly5c9-buttonContainer"
  >
    <Button
      color="secondary"
      disabled={false}
      onClick={[Function]}
      testId="clearAllButton"
      variant="text"
    >
      <Text
        acceptPlainTextWithPlaceholders={false}
        className={null}
        params={{}}
        role={null}
        string="filter.reset"
        transform={null}
      />
    </Button>
  </div>
</SurroundPortals>
`;

exports[`Filter: <ResetButton /> should render as deactivated 1`] = `
<SurroundPortals
  portalName="filter.reset-button"
  portalProps={
    {
      "disabled": true,
      "onClick": [Function],
    }
  }
>
  <div
    className="sg-gly5c9-buttonContainer"
  >
    <Button
      color="secondary"
      disabled={true}
      onClick={[Function]}
      testId="clearAllButton"
      variant="text"
    >
      <Text
        acceptPlainTextWithPlaceholders={false}
        className={null}
        params={{}}
        role={null}
        string="filter.reset"
        transform={null}
      />
    </Button>
  </div>
</SurroundPortals>
`;
